# RAGh-Tutor

./: .dockerignore  .gitignore  CONVERSION-SUMMARY.md  Dockerfile  Makefile  README-JAVA.md  README.md  build.bat  build.sh  docker-compose-java.yml  docker-compose.yml  pom.xml  prometheus.yml  pyproject.toml  requirements.txt
app/: __init__.py  config.py  dependencies.py  main.py
app/agents/: __init__.py  action_planner.py  contextual_agent_executor.py  rag_agent.py  tool_registry.py
app/chunking/: __init__.py  document_chunker.py  semantic_chunker.py  specialized_chunker.py
app/embedding/: __init__.py  batch_embedder.py  embedding_model.py  multimodal_embedder.py
app/features/: __init__.py  feedback_collector.py  multi_document_qa.py  query_analytics.py
app/generation/: __init__.py  citation_tracker.py  llm_client.py  prompt_builder.py  response_parser.py
app/memory/: __init__.py  context_window_manager.py  conversation_manager.py  memory_store.py  summarizer.py
app/middleware/: rate_limiter.py
app/monitoring/: health_checks.py  metrics.py  performance_profiler.py  tracing.py
app/performance/: __init__.py  batch_processor.py  query_optimizer.py  response_cache.py
app/processing/: __init__.py  audio_processor.py  document_loader.py  image_processor.py  pdf_processor.py  (+2 more)
docker/: Dockerfile  Dockerfile.dev  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  nginx.conf  prometheus.yml
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  pvc.yaml  secrets.yaml  service.yaml
scripts/: deploy.sh  index_documents.py
(+80 files in other folders)
